--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,11 +1,15 @@
 {
   "dependencies": {
-    "com.leopotam.ecs": "https://github.com/Leopotam/ecs.git#v20190722",
-    "com.leopotam.ecs-ui": "https://github.com/Leopotam/ecs-ui.git#v20190722",
-    "com.leopotam.ecs-unityintegration": "https://github.com/Leopotam/ecs-unityintegration.git#v20190722",
-    "com.unity.package-manager-ui": "2.1.2",
+    "com.leopotam.ecs": "https://github.com/Leopotam/ecs.git#2020.3.22",
+    "com.leopotam.ecs-ui": "https://github.com/Leopotam/ecs-ui.git#2020.3.22",
+    "com.leopotam.ecs-unityintegration": "https://github.com/Leopotam/ecs-unityintegration.git#2020.3.22",
+    "com.unity.ide.rider": "1.1.4",
+    "com.unity.ide.vscode": "1.1.4",
+    "com.unity.test-framework": "1.1.13",
     "com.unity.textmeshpro": "2.0.1",
+    "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
+    "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
     "com.unity.modules.audio": "1.0.0",
@@ -38,16 +42,16 @@
   },
   "lock": {
     "com.leopotam.ecs": {
-      "hash": "fe179b2eda5629d963409e130ccb685941ab8e31",
-      "revision": "v20190722"
+      "revision": "2020.3.22",
+      "hash": "2ff435176721563c254670988494b636fcf3cc67"
     },
     "com.leopotam.ecs-ui": {
-      "hash": "0ca6e9ff58b2cea42aa34aabc23aca279cb864b0",
-      "revision": "v20190722"
+      "revision": "2020.3.22",
+      "hash": "b958105d01529ef7985022133f2ab84b53f89d8b"
     },
     "com.leopotam.ecs-unityintegration": {
-      "hash": "3a5eff9acdf412abc14d3a38f15838380786c45f",
-      "revision": "v20190722"
+      "revision": "2020.3.22",
+      "hash": "a3ab84f4e28443f8ba66231cb697598277459b8d"
     }
   }
 }
